# src/models/user.dao.js
@@ -1,7 +1,7 @@
 import { pool } from "../../config/db.connect";
 import { BaseError } from "../../config/error";
 import { status } from "../../config/response.status";
-import { challengeMissionSql, confirmEmail, connectFoodCategory, getChallengeMissionSql, getMyReviewSql, getPreferToUserID, getUserEmail, getUserID, insertUserSql, reviewCount } from "./user.sql";
+import { challengeMissionSql, confirmEmail, connectFoodCategory, getChallengeMissionSql, getMyReviewSql, getPreferToUserID, getUserEmail, getUserID, getUserMissionListSql, insertUserSql, reviewCount, userMissionCount } from "./user.sql";
 
 // log in
 export const logInUser = async (data) => {
@@ -117,10 +117,28 @@ export const getMyReview = async (userId, reviewId, paging) => {
         
         if(reviewId==-1){
             const [temp] = await pool.query(reviewCount);
-            reviewId = temp[0].reviewCount;
+            reviewId = temp[0].reviewCount+1;
         }
         const [result] = await pool.query(getMyReviewSql, [userId, reviewId, paging]);
         
+        conn.release();
+        return result;
+    } catch (err) {
+        console.error(err);
+        throw new BaseError(status.PARAMETER_IS_WRONG);
+    }
+}
+
+export const getUserMission = async (userId, missionId, paging, status) => {
+    try {
+        const conn = await pool.getConnection();
+
+        if(missionId == -1){
+            const [temp] = await pool.query(userMissionCount);
+            missionId = temp[0].missionCount+1;
+        }
+        const [result] = await pool.query(getUserMissionListSql, [userId, missionId, status, paging]);
+
         conn.release();
         return result;
     } catch (err) {
