# swagger/user.swagger.yaml
@@ -231,3 +231,107 @@ paths:
               message:
                 type: string
                 example: 서버 에러, 관리자에게 문의 바랍니다.
+
+  /user/missions:
+    get:
+      tags:
+        - User
+      summary: 자신이 진행 혹은 완료한 미션 조회
+      parameters:
+        - name: userId
+          in: query
+          required: true
+          schema:
+            properties:
+              userId:
+                type: integer
+                example: 1
+        - name: missionId
+          in: query
+          required: false
+          schema:
+            properties:
+              reviewId:
+                type: integer
+                example: 1
+        - name: paging
+          in: query
+          required: false
+          schema:
+            properties:
+              size:
+                type: integer
+                example: 1
+        - name: status
+          in: query
+          required: true
+          schema:
+            properties:
+              size:
+                type: string
+                example: "active"
+      responses:
+        '200':
+          description: 사용자 미션 조회 성공!
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 200
+              isSuccess:
+                type: boolean
+                example: true
+              code:
+                type: integer
+                example: 2000
+              message:
+                type: string
+                example: "success!"
+              data:
+                type: object
+                example: {
+                  "userMissionId": 1,
+                  "missionId": 1,
+                  "status": "active",
+                  "context": "Mission Context",
+                  "deadline": "2000-00-00",
+                  "point": 500,
+                  "created_at": "2000-00-00"
+                }
+                
+        '400':
+          description: 잘못된 요청
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 400
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON001
+              message:
+                type: string
+                example: 잘못된 요청입니다
+
+        '500':
+          description: 서버 에러
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 500
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON000
+              message:
+                type: string
+                example: 서버 에러, 관리자에게 문의 바랍니다.
